Now works on Java 8