@@ -13,6 +13,8 @@ import com.cpp.cs.cs4450.util.ChunkFactory;
 
 import org.lwjgl.opengl.DisplayMode;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public abstract class GraphicsApplication {
@@ -21,12 +23,12 @@ public abstract class GraphicsApplication {
     private static final float CUBE_SIZE = 0.1f;
 
     public static void launch(final String ...args){
-        launch(List.of(args));
+        launch(Collections.unmodifiableList(Arrays.asList(args)));
     }
 
     public static void launch(final List<String> args){
         final Chunk chunk = ChunkFactory.createChunk(SIZE, CUBE_SIZE, PERSISTENCE);
-        final List<Renderable> renders = List.of(chunk);
+        final List<Renderable> renders = Collections.unmodifiableList(Collections.singletonList(chunk));
         final DisplayMode displayMode = new DisplayMode(Configuration.DISPLAY_WINDOW_WIDTH, Configuration.DISPLAY_WINDOW_HEIGHT);
 
         final GraphicsEngine graphicsEngine = new LWJGLGraphicsEngine(displayMode, renders, Configuration.DISPLAY_WINDOW_TITLE);
